# purl.tools

./: .justfile  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Trunk.toml  index.html
.github/workflows/: gh-pages-deploy.yml
scss/: style.scss
src/: main.rs  purl_data.rs  purl_eval.rs  purl_eval_cratesio.rs  purl_eval_github.rs  purl_eval_npm.rs
src/assets/: 404.html
