[package]
name = "purl-builder"
version = "0.1.0"
edition = "2021"
authors = ["Jan Hensel <ja_he@uni-bremen.de>"]
license = "MIT OR Apache-2.0"
description = "A little tool that helps you build purls."
keywords = ["purl", "leptos", "web-app"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.4", features = ["csr"] }
regex = "1.10.2"
