[package]
name = "purl-builder"
version = "0.1.0"
edition = "2021"
authors = ["Jan Hensel <ja_he@uni-bremen.de>"]
license = "MIT OR Apache-2.0"
description = "A little tool that helps you build purls."
keywords = ["purl", "leptos", "web-app"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.4", features = ["csr"] }
log = "0.4.20"
phosphor-leptos = "0.2.1"
regex = "1.10.2"

[dev-dependencies]
paste = "1.0"
